App functionality and code explanation written

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>App Name: A Coding Project By Charlie Kaylor</title>
+    <title>0 TO 100: A Coding Project By Charlie Kaylor</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -22,6 +22,13 @@
       crossorigin="anonymous"
     ></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="/css/site.css" />
 
     <link rel="icon" href="img/favicon (1).ico" />
@@ -31,9 +38,9 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><i class="fas fa-code d-inline-block align-text-center"></i> APP
-          NAME</a
+        <a class="navbar-brand logoFont" href="#"
+          ><i class="fas fa-code d-inline-block align-text-center"></i> 0 TO
+          100</a
         >
         <button
           class="navbar-toggler"
@@ -76,7 +83,7 @@
         <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
           <div class="col order-last order-lg-first">
             <h1 class="display-5 fw-bold lh-1 mb-3">
-              APP NAME: A Coding Project
+              0 TO 100: A Coding Project
             </h1>
             <h4 class="lead">
               Live life one loop at a time. A javascript coding excercise using
@@ -195,17 +202,17 @@
           >
             <div class="row">
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"
                   ><i class="fab fa-linkedin fa-2x"></i
                 ></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://github.com/ckaylor33" target="_blank"
                   ><i class="fab fa-github fa-2x"></i
                 ></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://twitter.com/charlie_kaylor" target="_blank"
                   ><i class="fab fa-twitter fa-2x"></i
                 ></a>
               </div>
