--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>App Name: A Coding Project By Charlie Kaylor</title>
+    <title>0 TO 100: A Coding Project By Charlie Kaylor</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -31,9 +31,8 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><i class="fas fa-code d-inline-block align-text-center"></i> APP
-          NAME</a
+        <a class="navbar-brand logoFont" href="#"
+          ><i class="fas fa-code d-inline-block align-text-center"></i> 0 TO 100</a
         >
         <button
           class="navbar-toggler"
@@ -72,8 +71,47 @@
 
     <!-- Main Section -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-lg-2">
+          <div class="col col-lg-4 border-end border-2">
+            <h1>0 TO 100: A Coding Project</h1>
+            <h4 class="lead">
+              Live life one loop at a time. A javascript coding excercise using
+              loops. Write a program that displays the numbers from 0 to 100.
+              Display the even numbers in <strong>BOLD.</strong>
+            </h4>
+            <h2 class="mt-5 border-bottom border-2" >Instructions</h2>
+            <p>Enter a starting value and an ending value. Press the button and the values will appear.</p>
+          </div>
+          <div class="col col-lg-8">
+            <div>
+              <h5>Enter Values</h5>
+              <form action="" class="row gy-2 gx-3">
+                <div class="col">
+                  <input type="number" id="startValue" class="form-control" placeholder="Start Value" value=0 aria-label="Star Value">
+                </div>
+                <div class="col">
+                  <input type="number" id="endValue" class="form-control" placeholder="End Value" value=100 aria-label="End Value">
+                </div>
+                <div class="col-12 d-flex justify-content-end">
+                  <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display The Numbers</button>
+                </div>
+              </form>
+              <h2 class="mt-5 border-bottom border-2">Results</h2>
+              <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                  <tbody id="results">
+                    <!--Results Go Here!!!-->
+        
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
     </main>
+
     <!-- Footer Section -->
     <footer class="footer mt-auto py-1">
       <div class="container-fluid">
@@ -116,17 +154,17 @@
           >
             <div class="row">
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"
                   ><i class="fab fa-linkedin fa-2x"></i
                 ></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://github.com/ckaylor33" target="_blank"
                   ><i class="fab fa-github fa-2x"></i
                 ></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://twitter.com/charlie_kaylor" target="_blank"
                   ><i class="fab fa-twitter fa-2x"></i
                 ></a>
               </div>
@@ -148,5 +186,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/site.js"></script>
+    <script>
+      document.getElementById('btnSubmit').addEventListener('click', getValues)
+    </script>
   </body>
 </html>
