--- a/code.html
+++ b/code.html
@@ -33,7 +33,7 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="#"
+        <a class="navbar-brand logoFont" href="index.html"
           ><i class="fas fa-code d-inline-block align-text-center"></i> 0 TO
           100</a
         >
