--- a/app.html
+++ b/app.html
@@ -1,193 +1,158 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <title>0 TO 100: A Coding Project By Charlie Kaylor</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+<head>
+  <title>0 TO 100: A Coding Project By Charlie Kaylor</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <script
-      src="https://kit.fontawesome.com/5db21ba9c6.js"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="/css/site.css" />
+  <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="img/favicon (1).ico" />
-  </head>
+  <link rel="stylesheet" href="/css/site.css" />
 
-  <body class="d-flex flex-column h-100">
-    <!-- Nav Section -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="index.html"
-          ><i class="fas fa-code d-inline-block align-text-center"></i> 0 TO 100</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page"" href="app.html">The App</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="code.html">The Code</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">About</a>
-            </li>
-          </ul>
-        </div>
+  <link rel="icon" href="img/favicon (1).ico" />
+</head>
+
+<body class="d-flex flex-column h-100">
+  <!-- Nav Section -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand logoFont" href="index.html"><i class="fas fa-code d-inline-block align-text-center"></i> 0
+        TO 100</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page"" href=" app.html">The App</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="code.html">The Code</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="#">About</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Main Section -->
-    <main class="flex-shrink-0">
-      <div class="container mt-5">
-        <div class="row row-cols-1 row-cols-lg-2">
-          <div class="col col-lg-4 border-end border-2">
-            <h1>0 TO 100: A Coding Project</h1>
-            <h4 class="lead">
-              Live life one loop at a time. A javascript coding excercise using
-              loops. Write a program that displays the numbers from 0 to 100.
-              Display the even numbers in <strong>BOLD.</strong>
-            </h4>
-            <h2 class="mt-5 border-bottom border-2" >Instructions</h2>
-            <p>Enter a starting value and an ending value. Press the button and the values will appear.</p>
-          </div>
-          <div class="col col-lg-8">
-            <div>
-              <h5>Enter Values</h5>
-              <form action="" class="row gy-2 gx-3">
-                <div class="col">
-                  <input type="number" id="startValue" class="form-control" placeholder="Start Value" value=0 aria-label="Star Value">
-                </div>
-                <div class="col">
-                  <input type="number" id="endValue" class="form-control" placeholder="End Value" value=100 aria-label="End Value">
-                </div>
-                <div class="col-12 d-flex justify-content-end">
-                  <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display The Numbers</button>
-                </div>
-              </form>
-              <h2 class="mt-5 border-bottom border-2">Results</h2>
-              <div class="table-responsive">
-                <table class="table table-striped table-sm">
-                  <tbody id="results">
-                    <!--Results Go Here!!!-->
-        
-                  </tbody>
-                </table>
+  <!-- Main Section -->
+  <main class="flex-shrink-0">
+    <div class="container mt-5">
+      <div class="row row-cols-1 row-cols-lg-2">
+        <div class="col col-lg-4 border-end border-2">
+          <h1>0 TO 100: A Coding Project</h1>
+          <h4 class="lead">
+            Live life one loop at a time. A javascript coding excercise using
+            loops. Write a program that displays the numbers from 0 to 100.
+            Display the even numbers in <strong>BOLD.</strong>
+          </h4>
+          <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+          <p>Enter a starting value and an ending value. Press the button and the values will appear.</p>
+        </div>
+        <div class="col col-lg-8">
+          <div>
+            <h5>Enter Values</h5>
+            <form action="" class="row gy-2 gx-3">
+              <div class="col">
+                <input type="number" id="startValue" class="form-control" placeholder="Start Value" value=0
+                  aria-label="Star Value">
               </div>
+              <div class="col">
+                <input type="number" id="endValue" class="form-control" placeholder="End Value" value=100
+                  aria-label="End Value">
+              </div>
+              <div class="col-12 d-flex justify-content-end">
+                <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display The Numbers</button>
+              </div>
+            </form>
+            <h2 class="mt-5 border-bottom border-2">Results</h2>
+            <div class="table-responsive">
+              <table class="table table-striped table-sm">
+                <tbody id="results">
+                  <!--Results Go Here!!!-->
+
+                </tbody>
+              </table>
             </div>
-          </div>  
+          </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <!-- Footer Section -->
-    <footer class="footer mt-auto py-1">
-      <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-lg-3 gy-2">
-          <div
-            class="
+  <!-- Footer Section -->
+  <footer class="footer mt-auto py-1">
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-lg-3 gy-2">
+        <div class="
               col
               order-last order-lg-first
               text-light
               d-flex
               align-items-center
-            "
-          >
-            <div>
-              <span class="text-muted">&copy;2021</span> Charlie Kaylor |
-              charliekaylor@hotmail.com
-            </div>
+            ">
+          <div>
+            <span class="text-muted">&copy;2022</span> Charlie Kaylor |
+            charliekaylor@hotmail.com
           </div>
-          <div
-            class="
+        </div>
+        <div class="
               col
               d-flex
               align-items-center
               justify-content-start justify-content-lg-center
-            "
-          >
-            <img
-              src="img/White logo - no background.svg"
-              alt="Charlie Kaylor Logo"
-              height="59"
-            />
-          </div>
-          <div
-            class="
+            ">
+          <img src="img/White logo - no background.svg" alt="Charlie Kaylor Logo" height="59" />
+        </div>
+        <div class="
               col
               d-flex
               align-items-center
               justify-content-start justify-content-lg-end
-            "
-          >
-            <div class="row">
-              <div class="col social">
-                <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"
-                  ><i class="fab fa-linkedin fa-2x"></i
-                ></a>
-              </div>
-              <div class="col social">
-                <a href="https://github.com/ckaylor33" target="_blank"
-                  ><i class="fab fa-github fa-2x"></i
-                ></a>
-              </div>
-              <div class="col social">
-                <a href="https://twitter.com/charlie_kaylor" target="_blank"
-                  ><i class="fab fa-twitter fa-2x"></i
-                ></a>
-              </div>
+            ">
+          <div class="row">
+            <div class="col social">
+              <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"><i
+                  class="fab fa-linkedin fa-2x"></i></a>
+            </div>
+            <div class="col social">
+              <a href="https://github.com/ckaylor33" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            </div>
+            <div class="col social">
+              <a href="https://twitter.com/charlie_kaylor" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
             </div>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/site.js"></script>
-    <script>
-      document.getElementById('btnSubmit').addEventListener('click', getValues)
-    </script>
-  </body>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+  </script>
+  <script src="js/site.js"></script>
+  <script>
+    document.getElementById('btnSubmit').addEventListener('click', getValues)
+  </script>
+</body>
+
 </html>
