--- a/code.html
+++ b/code.html
@@ -1,85 +1,66 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <title>0 TO 100: A Coding Project By Charlie Kaylor</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+<head>
+  <title>0 TO 100: A Coding Project By Charlie Kaylor</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <script
-      src="https://kit.fontawesome.com/5db21ba9c6.js"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="/css/site.css" />
+  <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/prism.css" />
+  <link rel="stylesheet" href="/css/site.css" />
 
-    <link rel="icon" href="img/favicon (1).ico" />
-  </head>
+  <link rel="stylesheet" href="css/prism.css" />
 
-  <body class="d-flex flex-column h-100">
-    <!-- Nav Section -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="index.html"
-          ><i class="fas fa-code d-inline-block align-text-center"></i> 0 TO
-          100</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="app.html">The App</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="code.html"
-                >The Code</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">About</a>
-            </li>
-          </ul>
-        </div>
+  <link rel="icon" href="img/favicon (1).ico" />
+</head>
+
+<body class="d-flex flex-column h-100">
+  <!-- Nav Section -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand logoFont" href="index.html"><i class="fas fa-code d-inline-block align-text-center"></i> 0
+        TO
+        100</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="app.html">The App</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="https://github.com/ckaylor33/0To100">Git Repo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="#">About</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- Main Section -->
-    <main class="flex-shrink-0">
-      <div class="container py-5 px-5 mt-5">
-        <h2 class="border-1 border-bottom border-dark">
-          The Code for 0 TO 100:
-        </h2>
-        <div class="row row-cols-1 row-cols-lg-2">
-          <div class="col-lg-8">
-            <pre class="line-numbers"><code class="language-javascript">
+    </div>
+  </nav>
+  <!-- Main Section -->
+  <main class="flex-shrink-0">
+    <div class="container py-5 px-5 mt-5">
+      <h2 class="border-1 border-bottom border-dark">
+        The Code for 0 TO 100:
+      </h2>
+      <div class="row row-cols-1 row-cols-lg-2">
+        <div class="col-lg-8">
+          <pre class="line-numbers"><code class="language-javascript">
               //GET THE VALUES FROM THE PAGE//
 //start or controller function
 function getValues() {
@@ -140,105 +121,101 @@ function displayNumbers(numbers) {
 }
 
             </code></pre>
-          </div>
-          <div class="col-lg-4">
-            <p>The code is structured in three functions to keep everything nice and readable. No spaghetti code!</p>
-            <h5>Get Values</h5>
-            <p>
-              The first function is a controller/starter function. I first get the initial values from the users inputs in the document/HTML (button event listener seperated into the document/HTML), then parse text types that may not be integers (the zero was initially showing as text/string) and check if that was successful using an if statement inside the function. If successful the generateNumbers function is called along with the displayNumbers function, else an alert is shown to the user.  
-            </p>
-            <h5>Generate Numbers</h5>
-            <p>The second function generates the values from start to end using the inputted values by the user. It does this by retrieving parameters from the numbers variable defined in the getValues function above it (start and end value). I then execute a for loop to get all the numbers from start to end and push them to the numbers array - not to be confused with the numbers variable in getValues(these are different due to block scoping). I then return the numbers to give getValues access to the newly created numbers array.</p>
-            <h5>Display Numbers</h5>
-            <p>The final function is used to display and mark the even numbers bold. It is called from the getValues function and given the numbers array (retrieved from generateNumbers orignally) as a parameter, using this to loop through the length of the array with another for loop. The index (each individual integer in the array) is then added to the document/HTML, adding to the document/HTML using innerHTML and a template literal ( added to templateRows). Bold font is added to even numbers using an if statement, checking if numbers are divisible by 2, with class names added to the template literal to go into the document/HTML. Even and odd class names are given specific styling in the main site css.</p>
-          </div>
+        </div>
+        <div class="col-lg-4">
+          <p>The code is structured in three functions to keep everything nice and readable. No spaghetti code!</p>
+          <h5>Get Values</h5>
+          <p>
+            The first function is a controller/starter function. I first get the initial values from the users inputs in
+            the document/HTML (button event listener seperated into the document/HTML), then parse text types that may
+            not be integers (the zero was initially showing as text/string) and check if that was successful using an if
+            statement inside the function. If successful the generateNumbers function is called along with the
+            displayNumbers function, else an alert is shown to the user.
+          </p>
+          <h5>Generate Numbers</h5>
+          <p>The second function generates the values from start to end using the inputted values by the user. It does
+            this by retrieving parameters from the numbers variable defined in the getValues function above it (start
+            and end value). I then execute a for loop to get all the numbers from start to end and push them to the
+            numbers array - not to be confused with the numbers variable in getValues(these are different due to block
+            scoping). I then return the numbers to give getValues access to the newly created numbers array.</p>
+          <h5>Display Numbers</h5>
+          <p>The final function is used to display and mark the even numbers bold. It is called from the getValues
+            function and given the numbers array (retrieved from generateNumbers orignally) as a parameter, using this
+            to loop through the length of the array with another for loop. The index (each individual integer in the
+            array) is then added to the document/HTML, adding to the document/HTML using innerHTML and a template
+            literal ( added to templateRows). Bold font is added to even numbers using an if statement, checking if
+            numbers are divisible by 2, with class names added to the template literal to go into the document/HTML.
+            Even and odd class names are given specific styling in the main site css.</p>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <!-- Footer Section -->
-    <footer class="footer mt-auto py-1">
-      <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-lg-3 gy-2">
-          <div
-            class="
+  <!-- Footer Section -->
+  <footer class="footer mt-auto py-1">
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-lg-3 gy-2">
+        <div class="
               col
               order-last order-lg-first
               text-light
               d-flex
               align-items-center
-            "
-          >
-            <div>
-              <span class="text-muted">&copy;2021</span> Charlie Kaylor |
-              charliekaylor@hotmail.com
-            </div>
+            ">
+          <div>
+            <span class="text-muted">&copy;2022</span> Charlie Kaylor |
+            charliekaylor@hotmail.com
           </div>
-          <div
-            class="
+        </div>
+        <div class="
               col
               d-flex
               align-items-center
               justify-content-start justify-content-lg-center
-            "
-          >
-            <img
-              src="img/White logo - no background.svg"
-              alt="Charlie Kaylor Logo"
-              height="59"
-            />
-          </div>
-          <div
-            class="
+            ">
+          <img src="img/White logo - no background.svg" alt="Charlie Kaylor Logo" height="59" />
+        </div>
+        <div class="
               col
               d-flex
               align-items-center
               justify-content-start justify-content-lg-end
-            "
-          >
-            <div class="row">
-              <div class="col social">
-                <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"
-                  ><i class="fab fa-linkedin fa-2x"></i
-                ></a>
-              </div>
-              <div class="col social">
-                <a href="https://github.com/ckaylor33" target="_blank"
-                  ><i class="fab fa-github fa-2x"></i
-                ></a>
-              </div>
-              <div class="col social">
-                <a href="https://twitter.com/charlie_kaylor" target="_blank"
-                  ><i class="fab fa-twitter fa-2x"></i
-                ></a>
-              </div>
+            ">
+          <div class="row">
+            <div class="col social">
+              <a href="https://www.linkedin.com/in/charlie-kaylor-2223951b3/" target="_blank"><i
+                  class="fab fa-linkedin fa-2x"></i></a>
+            </div>
+            <div class="col social">
+              <a href="https://github.com/ckaylor33" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            </div>
+            <div class="col social">
+              <a href="https://twitter.com/charlie_kaylor" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
             </div>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+  </script>
 
-    <script src="js/prism.js"></script>
+  <script src="js/prism.js"></script>
 
-    <script>
-      Prism.plugins.NormalizeWhitespace.setDefaults({
-        'remove-trailing': true,
-        'remove-indent': true,
-        'left-trim': true,
-        'right-trim': true,
-      })
-    </script>
-  </body>
+  <script>
+    Prism.plugins.NormalizeWhitespace.setDefaults({
+      'remove-trailing': true,
+      'remove-indent': true,
+      'left-trim': true,
+      'right-trim': true,
+    })
+  </script>
+</body>
+
 </html>
