--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </h5>
         </div>
         <div class="col">
-          <img src="/img/Color logo - no background.svg" alt="App Logo" class="img-fluid center-block d-block mx-auto"
+          <img src="/img/Color logo with background.svg" alt="App Logo" class="img-fluid center-block d-block mx-auto"
             width="700" height="500" />
         </div>
       </div>
